# autocheck-codex

./: README.md  pyproject.toml
.github/workflows/: auto-checkin.yml  checkin.yml
autocheck/: common.py  main.py  notify.py
autocheck/sites/: bilibili.py  railgun.py  v2ex.py
scripts/: checkin.py  fnnas.py  railgun.py  v2ex.py
